rancher/route-rg.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: rancher-rg
  namespace: cattle-system
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    # gateway namespace
    namespace: default
  to:
  - group: ""
    kind: Service
