rancher/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rancher-route
  namespace: default
spec:
  parentRefs:
    - name: eg
      namespace: default
  hostnames:
    - "dash.rancher.lightup.tw"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          namespace: cattle-system
          name: rancher
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
